cilium/test-encryption.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  containers:
    - image: nginx
      name: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: curlpod
  name: curlpod
spec:
  containers:
    - command: ['sh', '-c', 'echo "Hello, Kubernetes!" && sleep 3600']
      image: radial/busyboxplus:curl
      name: curlpod
      resources: {}
