cilium/l3-np-8.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l3-np-8"
  namespace: dev
spec:
  # allow to go from app1 pod in dev namespace to any pod in dev namespace
  endpointSelector:
    matchLabels:
      app: app1
  egress:
    - toEndpoints:
      - {}
