cilium/l7-np-4.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l7-np-4"
  namespace: dev
spec:
  # allow to connect to app4 pod in dev namespace only from app2 pod from dev namespace
  # allow to connect from outside
  endpointSelector:
    matchLabels:
      app: app4
  ingress:
    - fromEntities:
       - world
    - fromEndpoints:
        - matchLabels:
            app: app2
